Fixed Stretch

--- a/css/index.css
+++ b/css/index.css
@@ -184,8 +184,8 @@ nav a:hover {
 		width: 95%;
 		margin: 25px auto;
 	}
-	.services-header .header-image {
-		display: none;
+	.services-header-img {
+		width: 100%;
 	}
 }
 
@@ -260,6 +260,8 @@ main {
 	margin-bottom: 10px;
 }
 
+
+
 /* Copyright Text */
 footer {
 	margin: 40px 0;
@@ -297,7 +299,7 @@ footer {
 		margin: 0 auto;
 	}
 	.middle-img{
-		width: inherit;
+		width: 100%;
 	}
 }
 .features-section {
